--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -9,8 +9,8 @@
         }
 
         #kuangjia{
-            width:50%;
-            height:800px;
+            width:80%;
+            height:90%;
             background:#e9fcf8;
             border:2px dashed #b1bcdd;
         }
