--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -10,7 +10,7 @@
 
         #kuangjia{
             width:80%;
-            height:90%;
+            height:500px;
             background:#e9fcf8;
             border:2px dashed #b1bcdd;
         }
