--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -123,6 +123,8 @@
         <div class="informtion" id="informtion6">
             信息6：_________
         </div>
+        
+        <img src="img/蓝泡泡.png" />
     </div>
 </body>
 </html>
