--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -124,7 +124,7 @@
             信息6：_________
         </div>
         
-        <img src="img/蓝泡泡.png" />
+        <img src=".img/蓝泡泡.png" />
     </div>
 </body>
 </html>
