--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -124,7 +124,10 @@
             信息6：_________
         </div>
         
-        <img src=".img/蓝泡泡.png" />
+        <img src=".img/蓝泡泡.png" 
+             positon:relative;
+             left:50px;
+             top:50px;/>
     </div>
 </body>
 </html>
