--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -21,6 +21,10 @@
             text-align:center;
             animation: title 20s;
         }
+        
+        #bule{
+            background:url(.img/蓝泡泡.png) no-repeat;
+        }
 
         #informtion1{
             animation:informtion1 20s;
@@ -124,10 +128,7 @@
             信息6：_________
         </div>
         
-        <img src=".img/蓝泡泡.png" 
-             positon:relative;
-             left:50px;
-             top:50px;/>
-    </div>
+        <div id="bule">
+        </div>
 </body>
 </html>
