--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -24,6 +24,8 @@
         
         #bule{
             background:url(.img/蓝泡泡.png) no-repeat;
+            width:50px;
+            height:50px;
         }
 
         #informtion1{
