--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -130,7 +130,7 @@
             信息6：_________
         </div>
         
-        <div id="bule">
+        <div id="bule">111
         </div>
 </body>
 </html>
