--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -25,7 +25,6 @@
         #bule{
             width:50px;
             height:50px;
-            background:url(.img/蓝泡泡.png) no-repeat;
         }
 
         #informtion1{
@@ -130,7 +129,8 @@
             信息6：_________
         </div>
         
-        <div id="bule">111
+        <div id="bule">
+            <img src=".img/蓝泡泡.png" />
         </div>
 </body>
 </html>
