--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -130,7 +130,7 @@
         </div>
         
         <div id="bule">
-            <img src=".img/蓝泡泡.png" />
+            <img src="./img/蓝泡泡.png" />
         </div>
 </body>
 </html>
