--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -25,6 +25,7 @@
         #bule{
             width:50px;
             height:50px;
+            background:url(./img/蓝泡泡.png) no-repeat;
         }
 
         #informtion1{
@@ -129,8 +130,6 @@
             信息6：_________
         </div>
         
-        <div id="bule">
-            <img src="./img/蓝泡泡.png" />
-        </div>
+        <div id="bule"></div>
 </body>
 </html>
