--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -26,6 +26,7 @@
             width:50px;
             height:50px;
             background:url(./img/蓝泡泡.png) no-repeat;
+            background-size:50px 50px;
         }
 
         #informtion1{
