--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -27,6 +27,9 @@
             height:50px;
             background:url(./img/蓝泡泡.png) no-repeat;
             background-size:50px 50px;
+            position:relative;
+            left:50px;
+            top:300px;
         }
 
         #informtion1{
