--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -30,6 +30,7 @@
             position:relative;
             left:50px;
             top:300px;
+            animation:paopao 3s;
         }
 
         #informtion1{
@@ -100,6 +101,12 @@
             0%{opacity:0;}
             30%{opacity:0;}
             40%{opacity:100;}
+        }
+        
+        @keyframes paopao{
+            0%{opacity:100;left:0;}
+            10%{left:30px;top:50px;}
+            20%{opacity:0;left:0;top:100px;}
         }
     </style>
 </head>
