--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -30,7 +30,7 @@
             position:relative;
             left:50px;
             top:300px;
-            animation:paopao 3s;
+            animation:paopao 3s infinite;
         }
 
         #informtion1{
