--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -105,8 +105,8 @@
         
         @keyframes paopao{
             0%{opacity:100;left:0;}
-            10%{left:30px;bottom:50px;}
-            20%{opacity:0;left:0;bottom:100px;}
+            10%{left:30px;}
+            20%{opacity:0;left:0;top:100px;}
         }
     </style>
 </head>
