--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -27,7 +27,7 @@
             height:50px;
             background:url(./img/蓝泡泡.png) no-repeat;
             background-size:50px 50px;
-            position:relative;
+            position:absolute;
             left:50px;
             top:450px;
             animation:paopao 3s infinite;
