--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -28,6 +28,8 @@
             background:url(./img/蓝泡泡.png) no-repeat;
             background-size:50px 50px;
             position:absolute;
+            right:50px;
+            top:50px;
             animation:paopao 3s infinite;
         }
 
