--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -28,6 +28,7 @@
             background:url(./img/蓝泡泡.png) no-repeat;
             background-size:50px 50px;
             position:absolute;
+            top:100px
             animation:paopao 3s infinite;
         }
 
