--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -28,8 +28,9 @@
             background:url(./img/蓝泡泡.png) no-repeat;
             background-size:50px 50px;
             position:absolute;
-            top:100px;
-            animation:paopao 3s infinite;
+            left:50px;
+            top:750px;
+            animation:paopao1 3s infinite;
         }
 
         #informtion1{
