--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -28,7 +28,7 @@
             background:url(./img/蓝泡泡.png) no-repeat;
             background-size:50px 50px;
             position:absolute;
-            left:50px;
+            left:30%;
             top:750px;
             animation:paopao1 3s infinite;
         }
