--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -33,6 +33,17 @@
             animation:paopao1 3s infinite;
         }
 
+         #cheng{
+            width:80px;
+            height:80px;
+            background:url(./img/橙泡泡.png) no-repeat;
+            background-size:80px 80px;
+            position:absolute;
+            left:33%;
+            top:720px;
+            animation:paopao1 3s infinite;
+        }
+        
         #informtion1{
             animation:informtion1 20s;
         }
@@ -138,5 +149,6 @@
         </div>
         
         <div id="bule"></div>
+        <div id="cheng"></div>
 </body>
 </html>
