--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -158,6 +158,11 @@
             40%{opacity:100;}
         }
         
+        @keyframes paopao1{
+            0%{opacity:100;left:0;}
+            15%{left:80px;}
+            100%{opacity:0;left:0;top:100px;}
+        }
         
     </style>
 </head>
