--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -159,9 +159,9 @@
         }
         
         @keyframes paopao1{
-            0%{opacity:100;left:0;}
-            15%{left:80px;}
-            100%{opacity:0;left:0;top:100px;}
+            0%{opacity:100;left:48%;}
+            30%{left:50%px;}
+            100%{opacity:0;left40%:;top:100px;}
         }
         
     </style>
