--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -161,7 +161,8 @@
         @keyframes paopao1{
             0%{opacity:100;left:48%;}
             25%{left:40%;}
-            50%{opacity:0;left:55%;top:100px;}
+            50%{opacity:30;left:50%}
+            100%{opacity:0;left:55%;top:100px;}
         }
         
     </style>
