--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -160,7 +160,7 @@
         
         @keyframes paopao1{
             0%{opacity:100;left:48%;}
-            25%{left:42%;}
+            25%{opacity:50;left:42%;}
             60%{opacity:0;left:50%}
             100%{opacity:0;left:55%;top:100px;}
         }
