--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="./img/icon1.png" />
     <title>个人简历</title>
     <style>
         body,div,p{
