--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -204,6 +204,7 @@
     </style>
 </head>
 <body>
+    <img src="./img/suolvetu.png" style="visibility:hidden"; width:0px; height:0px;/>
     <div id="kuangjia">
 
         <div id="title">
