--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -204,7 +204,7 @@
     </style>
 </head>
 <body>
-    <img src="./img/suolvetu.jpg" />
+    <img src="./img/suolvetu.jpg" style="visibility:hidden; width:0px; height:0px;"/>
     <div id="kuangjia">
 
         <div id="title">
