--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -7,9 +7,11 @@
     <style>
         body,div,p{
             margin:0 auto;
-            bgcolor:#f4f4f4;
         }
 
+        body{
+        bgcolor:#f4f4f4;
+        }
         #kuangjia{
             width:80%;
             height:800px;
