--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -10,7 +10,7 @@
         }
 
         body{
-        bgcolor:#f4f4f4;
+        background-color:#f4f4f4;
         }
         #kuangjia{
             width:80%;
