--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -92,6 +92,16 @@
             animation:paopao6 6s infinite;
         }
         
+        #star1{
+            width:50px;
+            height:50px;
+            background:url(./img/star.png) no-repeat;
+            background-size:30px;
+            position:absolute;
+            left:42%;
+            top:2%;
+        }
+        
         #informtion1{
             animation:informtion1 20s;
         }
