--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -218,7 +218,7 @@
 </head>
 <body>
     <div id="kuangjia">
-
+        <div id="star1"></div>
         <div id="title">
             个人简历
         </div>
