--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -96,7 +96,7 @@
             width:50px;
             height:50px;
             background:url(./img/star.png) no-repeat;
-            background-size:30px;
+            background-size:30px 30px;
             position:absolute;
             left:42%;
             top:2%;
