--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -279,6 +279,13 @@
 <body>
     <div id="kuangjia">
         <div id="star1"></div>
+        <div id="star2"></div>
+        <div id="star3"></div>
+        <div id="star4"></div>
+        <div id="star5"></div>
+        <div id="star6"></div>
+        <div id="star7"></div>
+        
         <div id="title">
             个人简历
         </div>
