--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -100,6 +100,13 @@
             position:absolute;
             left:42%;
             top:15px;
+            animation:star1 1s infinite;
+        }
+        
+        @keyframes star1{
+		0%{opacity:100;}
+		50%{opacity:0; background-size:0px 0px;}
+		100%{opacity:100; background-size:25px 25px;}
         }
         
         #star2{
