--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="./img/icon1.png" />
-    <title>个人简历</title>
+    <title>个人简历demo</title>
     <style>
         body,div,p{
             margin:0 auto;
