--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -340,7 +340,7 @@
         </div>
 
         <div class="informtion" id="informtion1">
-            信息1：_________
+            基本信息
         </div>
 
         <div class="informtion" id="informtion2">
