--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -212,7 +212,10 @@
         }
 	    
         #informtion1{
+	    width:200px;
+	    height:50px;
             animation:informtion1 20s;
+	    border-bottom:2px solid #000;
         }
 
         #informtion2{
