--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -212,10 +212,7 @@
         }
 	    
         #informtion1{
-	    width:200px;
-	    height:50px;
             animation:informtion1 20s;
-	    border-bottom:2px solid #000;
         }
 
         #informtion2{
@@ -343,23 +340,23 @@
         </div>
 
         <div class="informtion" id="informtion1">
-            基本信息
+            <img src="../img/information.png"/>基本信息
         </div>
 
         <div class="informtion" id="informtion2">
-            信息2：_________
+            <img src="../img/book.png"/>求职意向
         </div>
 
         <div class="informtion" id="informtion3">
-            信息3：_________
+            <img src="../img/book.png"/>教育意向
         </div>
 
         <div class="informtion" id="informtion4">
-            信息4：_________
+            <img src="../img/book.png"/>专业技能
         </div>
 
         <div class="informtion" id="informtion5">
-            信息5：_________
+            <img src="../img/book.png"/>校园实践
         </div>
 
         <div class="informtion" id="informtion6">
