--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -340,23 +340,23 @@
         </div>
 
         <div class="informtion" id="informtion1">
-            <img src="../img/information.png"/>基本信息
+            <img src="./img/information.png"/>基本信息
         </div>
 
         <div class="informtion" id="informtion2">
-            <img src="../img/book.png"/>求职意向
+            <img src="./img/book.png"/>求职意向
         </div>
 
         <div class="informtion" id="informtion3">
-            <img src="../img/book.png"/>教育意向
+            <img src="./img/study.png"/>教育背景
         </div>
 
         <div class="informtion" id="informtion4">
-            <img src="../img/book.png"/>专业技能
+            <img src="./img/skill.png"/>专业技能
         </div>
 
         <div class="informtion" id="informtion5">
-            <img src="../img/book.png"/>校园实践
+            <img src="./img/the last.png"/>校园实践
         </div>
 
         <div class="informtion" id="informtion6">
