--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -15,7 +15,7 @@
         #kuangjia{
             width:80%;
             height:800px;
-            background:#e9fcf8;
+            background:#FFF;
             border:2px dashed #b1bcdd;
         }
 
@@ -348,7 +348,7 @@
         </div>
 
         <div class="informtion" id="informtion3">
-            <img src="./img/study.png"/>教育背景
+            <img src="./img/studying.png"/>教育背景
         </div>
 
         <div class="informtion" id="informtion4">
