--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -348,7 +348,7 @@
         </div>
 
         <div class="informtion" id="informtion3">
-            <img src="./img/studying.png"/>教育背景
+            <img src="./img/study.jpg"/>教育背景
         </div>
 
         <div class="informtion" id="informtion4">
