--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -340,7 +340,7 @@
         </div>
 
         <div class="informtion" id="informtion1">
-            <img src="./img/information.png"/>基本信息
+            <img src="./img/information.png" width:50px; height:50px;/>基本信息
         </div>
 
         <div class="informtion" id="informtion2">
