--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -326,8 +326,9 @@
 	    #information{
 		    width:10px;
 		    height:10px;
-		    background-image:(url：“./img/information.png”)；
+		    background-image:url(./img/information.png)；
 	    }
+	    
     </style>
 </head>
 <body>
