--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -15,7 +15,7 @@
         #kuangjia{
             width:80%;
             height:800px;
-            background:url(./img/background top.png );
+            background-image:url(./img/background top.png );
             border:2px dashed #b1bcdd;
         }
 
