--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -350,7 +350,7 @@
         </div>
 
         <div class="informtion" id="informtion2">
-            <img src="./img/book.png"/>求职意向
+            <img src="./img/book.png" width:10px height:10px/>求职意向
         </div>
 
         <div class="informtion" id="informtion3">
