--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -323,12 +323,6 @@
             100%{opacity:0;left:76%;top:300px;}
         }
         
-	    #information{
-		    width:10px;
-		    height:10px;
-		    background-image:url(./img/information.png)；
-	    }
-	    
     </style>
 </head>
 <body>
@@ -346,7 +340,7 @@
         </div>
 
         <div class="informtion" id="informtion1">
-            <div id="information"></div>基本信息
+            <img src="./img/information.png" width:10px height:10px/>基本信息
         </div>
 
         <div class="informtion" id="informtion2">
