--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -338,7 +338,7 @@
         <div id="title">
             个人简历
         </div>
-
+	<img src="./img/backgroundtop.png"/>
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width:10px height:10px/>基本信息
         </div>
