--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -344,7 +344,7 @@
         </div>
 
         <div class="informtion" id="informtion2">
-            <img src="./img/book.png" width:10px height:10px/>求职意向
+            <img src="./img/book.png" width="10px" height"10px"/>求职意向
         </div>
 
         <div class="informtion" id="informtion3">
