--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -340,23 +340,23 @@
         </div>
 	<img src="./img/background top.png"/>
         <div class="informtion" id="informtion1">
-            <img src="./img/information.png" width:10px height:10px/>基本信息
+            <img src="./img/information.png" width="30px" height"30px"/>基本信息
         </div>
 
         <div class="informtion" id="informtion2">
-            <img src="./img/book.png" width="10px" height"10px"/>求职意向
+            <img src="./img/book.png" width="30px" height"30px"/>求职意向
         </div>
 
         <div class="informtion" id="informtion3">
-            <img src="./img/study.jpg"/>教育背景
+            <img src="./img/study.jpg" width="30px" height"30px"/>教育背景
         </div>
 
         <div class="informtion" id="informtion4">
-            <img src="./img/skill.png"/>专业技能
+            <img src="./img/skill.png" width="30px" height"30px"/>专业技能
         </div>
 
         <div class="informtion" id="informtion5">
-            <img src="./img/the last.png"/>校园实践
+            <img src="./img/the last.png" width="30px" height"30px"/>校园实践
         </div>
 
         <div class="informtion" id="informtion6">
