--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -15,7 +15,8 @@
         #kuangjia{
             width:80%;
             height:800px;
-            
+            background-image:url(./img/background top.png);
+		               width:80%;
             border:2px dashed #b1bcdd;
         }
 
