--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -13,7 +13,7 @@
         background-color:#f4f4f4;
         }
         #kuangjia{
-            width:2300px;
+            width:80%;
             height:800px;
             background-image:url(./img/background top.png) no-repeat;
 		               
