--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -341,6 +341,8 @@
             个人简历
         </div>
 	
+	    <img src="./img/background top.png" width="800px" />
+	    
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
         </div>
