--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -341,7 +341,9 @@
             个人简历
         </div>
 	
+	    <div>
 	    <img src="./img/background top.png" width="100%" height="120px"/>
+	    </div>
 	    
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
