--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -326,7 +326,7 @@
         
 	    #bgtop{
 	    opacity:0.5;
-            postion:relative;
+            postion:absolute;
 	    }  
     </style>
 </head>
