--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -327,6 +327,8 @@
 	    #bgtop{
 	    opacity:0.5;
             postion:absolute;
+	    top:0px;
+            left:0px;
 	    }  
     </style>
 </head>
