--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -25,6 +25,9 @@
             font-family: 微软雅黑;
             text-align:center;
             animation: title 20s;
+	    postion:absolute;
+	    top:0px;
+            left:0px;
         }
         
         #bule{
