--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -25,7 +25,7 @@
             font-family: 微软雅黑;
             text-align:center;
             animation: title 20s;
-	    postion:absolute;
+	    position:absolute;
 	    top:0px;
             left:0px;
         }
@@ -302,7 +302,7 @@
          @keyframes paopao3{
             0%{opacity:100;left:65%;}
             25%{opacity:50;left:56%;}
-            60%{opacity:0;left:66%}
+         ,   60%{opacity:0;left:66%}
             100%{opacity:0;left:60%;top:250px;}
         }
         
@@ -329,7 +329,7 @@
         
 	    #bgtop{
 	    opacity:0.5;
-            postion:absolute;
+            position:absolute;
 	    top:0px;
             left:0px;
 	    }  
