--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -328,7 +328,7 @@
 	    opacity:0.5;
             position:absolute;
 	    top:0px;
-            left:0px;
+            left:10%;
             width:80%;
 	    }  
     </style>
