--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -353,7 +353,12 @@
             </div>
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
-        </div>
+            <blockquote>
+姓    名：廖新伟     	性  别：男
+出生年月：1999/08			住  址：深圳市南山区
+联系电话：13684910383		E-mail：787251317@qq.com
+		    </blockquote>
+	</div>
 
         <div class="informtion" id="informtion2">
             <img src="./img/book.png" width="25px" height"25px"/>求职意向
