--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -357,7 +357,12 @@
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
             <blockquote>
-姓    名：廖新伟     	性  别：男
+		<tr>
+			<td>姓    名：</td>
+			<td>廖新伟</td>     	
+			<td>性  别：</td>
+			<td>男</td>
+		</tr>
 出生年月：1999/08			住  址：深圳市南山区
 联系电话：13684910383		E-mail：787251317@qq.com
 		    </blockquote>
