--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -389,15 +389,16 @@
             <img src="./img/study.jpg" width="25px" height"25px"/>教育背景
 		<br/>
 		2014-2018		深圳第二高级技工学校电子商务专业
+		<br/>
 主修课程：网页设计与制作、网店运营、图形图像处理、office软件应用、电子商务应用等。
         </div>
 
         <div class="informtion" id="informtion4">
             <img src="./img/skill.png" width="25px" height"25px"/>专业技能
 		<br/>
- 	掌握会声会影软件的基本操作方法，能对视频进行简单编辑。
- 	了解Photoshop、CorelDRAW软件的使用方法。
- 	熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。
+ 	掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<br/>
+ 	了解Photoshop、CorelDRAW软件的使用方法。<br/>
+ 	熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<br/>
  	懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网
 
         </div>
@@ -405,7 +406,7 @@
         <div class="informtion" id="informtion5">
             <img src="./img/the last.png" width="25px" height"25px"/>校园实践
 		<br/>
-		开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。
+		开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。<br/>
 		为企业网站的留言板模块做过CSS修改。
 
         </div>
