--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -361,7 +361,7 @@
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
              <br/>
-		<tr class="size">
+		&nbsp;<tr class="size">
 			<td>姓    名：</td>
 			<td>廖新伟</td>     	
 			<td>性  别：</td>
