--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -19,8 +19,7 @@
         #kuangjia{
             width:80%;
             height:800px;
-            background-image:url(./img/background top.png) no-repeat;
-		               
+            background-color:#fff;       
             border:2px dashed #b1bcdd;
         }
 
