--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -13,7 +13,7 @@
         body{
         background-color:#f4f4f4;
         }
-	.111{
+	.a111{
 	font-size:15px;
 	}
         #kuangjia{
@@ -360,21 +360,21 @@
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
              <br/>
-		&nbsp;<tr class="111">
+		&nbsp;<tr class="a111">
 			<td>姓    名：</td>
 			<td>廖新伟</td>     	
 			<td>性  别：</td>
 			<td>男</td>
 		</tr>
 		     <br />
-		<tr class="111">
+		<tr class="a111">
 			<td>出生年月：</td>
 			<td>1999/08</td>     	
 			<td>住  址：</td>
 			<td>深圳市南山区</td>
 		</tr>
 		      <br />
-		<tr class="111">
+		<tr class="a111">
 			<td>联系电话：</td>
 			<td>13684910383</td>     	
 			<td>E-mail：</td>
@@ -391,11 +391,11 @@
         <div class="informtion" id="informtion3">
             <img src="./img/study.jpg" width="25px" height"25px"/>教育背景
 		<br/>
-		<tr class="111">
+		<tr class="a111">
 			<td>2014-2018		深圳第二高级技工学校电子商务专业<td/>
 		</tr>
 		<br/>
-		<tr class="111">
+		<tr class="a111">
 			<td>主修课程：网页设计与制作、网店运营、图形图像处理、office软件应用、电子商务应用等。<td>
 		</tr>
         </div>
@@ -403,7 +403,7 @@
         <div class="informtion" id="informtion4">
             <img src="./img/skill.png" width="25px" height"25px"/>专业技能
 		<br/>
-		<tr class="111">
+		<tr class="a111">
  			<td>掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<td/><br/>
  			<td>了解Photoshop、CorelDRAW软件的使用方法。<td/><br/>
  			<td>熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<td/><br/>
@@ -414,7 +414,7 @@
         <div class="informtion" id="informtion5">
             <img src="./img/the last.png" width="25px" height"25px"/>校园实践
 		<br/>
-		<tr class="111">
+		<tr class="a111">
 			<td>开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。<td/><br/>
 			<td>为企业网站的留言板模块做过CSS修改。<td/>
 		</tr>
