--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -360,10 +360,10 @@
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
              <br/>
-		&nbsp;<tr class="a111">
-			<td>姓    名：</td>
-			<td>廖新伟</td>     	
-			<td>性  别：</td>
+		<tr class="a111">
+			<td>姓&nbsp;&nbsp;名：</td>
+			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;    	
+			<td>性&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
 		     <br />
