--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -360,6 +360,7 @@
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
              <br/>
+		&nbsp;
 		<tr class="a111">
 			<td>姓&nbsp;&nbsp;名：</td>
 			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;    	
