--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -362,16 +362,16 @@
              <br/>
 		&nbsp;
 		<tr class="a111">
-			<td>姓&nbsp;&nbsp;名：</td>
+			<td>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
 			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;    	
-			<td>性&nbsp;&nbsp;别：</td>
+			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
 		     <br />
 		<tr class="a111">
 			<td>出生年月：</td>
 			<td>1999/08</td>     	
-			<td>住  址：</td>
+			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
 		</tr>
 		      <br />
