--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -368,16 +368,18 @@
 			<td>男</td>
 		</tr>
 		     <br />
+		&nbsp;
 		<tr class="a111">
 			<td>出生年月：</td>
-			<td>1999/08</td>     	
+			<td>1999/08</td>&nbsp;&nbsp;&nbsp;     	
 			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
 		</tr>
 		      <br />
+		&nbsp;
 		<tr class="a111">
 			<td>联系电话：</td>
-			<td>13684910383</td>     	
+			<td>13684910383</td>&nbsp;&nbsp;&nbsp;  	
 			<td>E-mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
