--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -14,7 +14,7 @@
         background-color:#f4f4f4;
         }
 	.a111{
-	font-size:15px;
+	font-size:20px;
 	}
         #kuangjia{
             width:80%;
@@ -361,17 +361,19 @@
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
              <br/>
 		&nbsp;
-		<tr class="a111">
+		<div class="a111">
+		<tr>
 			<td>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
 			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;    	
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
+		</div>
 		     <br />
 		&nbsp;
 		<tr class="a111">
 			<td>出生年月：</td>
-			<td>1999/08</td>&nbsp;&nbsp;&nbsp;     	
+			<td>1999/08</td>&nbsp;&nbsp;&nbsp;&nbsp;     	
 			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
 		</tr>
@@ -379,7 +381,7 @@
 		&nbsp;
 		<tr class="a111">
 			<td>联系电话：</td>
-			<td>13684910383</td>&nbsp;&nbsp;&nbsp;  	
+			<td>13684910383</td>&nbsp;&nbsp;&nbsp;&nbsp;	
 			<td>E-mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
