--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -360,9 +360,9 @@
         <div class="informtion" id="informtion1">
             <img src="./img/information.png" width="25px" height"25px"/>基本信息
              <br/>
-		&nbsp;
+		
 		<div class="a111">
-		<tr>
+		<tr>	&nbsp;
 			<td>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
 			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;    	
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
