--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -242,6 +242,7 @@
             font-size:26px;
             color:#272b37;
             margin-top:30px;
+	    z-index:9999;
         }
 
         @keyframes title{
