--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -365,16 +365,16 @@
 		<div class="a111">
 		<tr>	&nbsp;
 			<td>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
-			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;    	
+			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;&nbsp;	
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
 		</div>
-		     <br />
+		
 		&nbsp;
 		<tr class="a111">
 			<td>出生年月：</td>
-			<td>1999/08</td>&nbsp;&nbsp;&nbsp;&nbsp;     	
+			<td>1999/08</td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     	
 			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
 		</tr>
