--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -365,7 +365,7 @@
 		<div class="a111">
 		<tr>	&nbsp;
 			<td>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
-			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;&nbsp;	
+			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
@@ -382,7 +382,7 @@
 		&nbsp;
 		<tr class="a111">
 			<td>联系电话：</td>
-			<td>13684910383</td>&nbsp;&nbsp;&nbsp;&nbsp;	
+			<td>13684910383</td>&nbsp;&nbsp;&nbsp;	
 			<td>E-mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
