--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -372,20 +372,25 @@
 		</div>
 		
 		&nbsp;
-		<tr class="a111">
+		<div class="a111">
+		<tr>
 			<td>出生年月：</td>
 			<td>1999/08</td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     	
 			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
 		</tr>
+		</div>	
 		      <br />
+		
 		&nbsp;
+		<div class="a111">
 		<tr class="a111">
 			<td>联系电话：</td>
 			<td>13684910383</td>&nbsp;&nbsp;&nbsp;	
 			<td>E-mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
+		</div>
 		
 	</div>
 
