--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -381,7 +381,7 @@
 		&nbsp;
 		<tr >
 			<td>联系电话：</td>
-			<td>13684910383</td>&nbsp;&nbsp;&nbsp;	
+			<td>13684910383</td>&nbsp;&nbsp;
 			<td>E-mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
@@ -397,13 +397,14 @@
         <div class="informtion" id="informtion3">
             <img src="./img/study.jpg" width="25px" height"25px"/>教育背景
 		<br/>
-		<tr class="a111">
+		<div class="s111">
 			<td>2014-2018		深圳第二高级技工学校电子商务专业<td/>
 		</tr>
 		<br/>
-		<tr class="a111">
+		<tr >
 			<td>主修课程：网页设计与制作、网店运营、图形图像处理、office软件应用、电子商务应用等。<td>
 		</tr>
+	        </div>
         </div>
 
         <div class="informtion" id="informtion4">
