--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -398,6 +398,7 @@
             <img src="./img/study.jpg" width="25px" height"25px"/>教育背景
 		<br/>
 		<div class="s111">
+		<tr>&nbsp;
 			<td>2014-2018		深圳第二高级技工学校电子商务专业<td/>
 		</tr>
 		<br/>
