--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -399,10 +399,10 @@
 		<br/>
 		<div class="s111">
 		<tr>&nbsp;
-			<td>2014-2018		深圳第二高级技工学校电子商务专业<td/>
+			<td>2014-2018		深圳第二高级技工学校&nbsp;电子商务专业<td/>
 		</tr>
 		<br/>
-		<tr >
+		<tr >&nbsp;
 			<td>主修课程：网页设计与制作、网店运营、图形图像处理、office软件应用、电子商务应用等。<td>
 		</tr>
 	        </div>
