--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -397,7 +397,7 @@
         <div class="informtion" id="informtion3">
             <img src="./img/study.jpg" width="25px" height"25px"/>教育背景
 		<br/>
-		<div class="s111">
+		<div class="a111">
 		<tr>&nbsp;
 			<td>2014-2018		深圳第二高级技工学校&nbsp;电子商务专业<td/>
 		</tr>
@@ -411,21 +411,25 @@
         <div class="informtion" id="informtion4">
             <img src="./img/skill.png" width="25px" height"25px"/>专业技能
 		<br/>
-		<tr class="a111">
- 			<td>掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<td/><br/>
- 			<td>了解Photoshop、CorelDRAW软件的使用方法。<td/><br/>
- 			<td>熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<td/><br/>
- 			<td>懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网<td/>
+		<div class="a111">
+		<tr >
+ 			<td>&nbsp;掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<td/><br/>
+ 			<td>&nbsp;了解Photoshop、CorelDRAW软件的使用方法。<td/><br/>
+ 			<td>&nbsp;熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<td/><br/>
+ 			<td>&nbsp;懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网<td/>
 		</tr>
+		</div>
         </div>
 
         <div class="informtion" id="informtion5">
             <img src="./img/the last.png" width="25px" height"25px"/>校园实践
 		<br/>
-		<tr class="a111">
-			<td>开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。<td/><br/>
-			<td>为企业网站的留言板模块做过CSS修改。<td/>
+		<div class="a111">
+		<tr>
+			<td>&nbsp;开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。<td/><br/>
+			<td>&nbsp;为企业网站的留言板模块做过CSS修改。<td/>
 		</tr>
+		</div>
         </div>
 
 
