--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -381,7 +381,7 @@
 		&nbsp;
 		<tr >
 			<td>联系电话：</td>
-			<td>13684910383</td>&nbsp;&nbsp;
+			<td>13684910383</td>&nbsp;
 			<td>E-mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
@@ -413,10 +413,10 @@
 		<br/>
 		<div class="a111">
 		<tr >
- 			<td>&nbsp;掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<td/><br/>
- 			<td>&nbsp;了解Photoshop、CorelDRAW软件的使用方法。<td/><br/>
- 			<td>&nbsp;熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<td/><br/>
- 			<td>&nbsp;懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网<td/>
+ 			<td>&nbsp;&nbsp;掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<td/><br/>
+ 			<td>&nbsp;&nbsp;了解Photoshop、CorelDRAW软件的使用方法。<td/><br/>
+ 			<td>&nbsp;&nbsp;熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<td/><br/>
+ 			<td>&nbsp;&nbsp;懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网<td/>
 		</tr>
 		</div>
         </div>
@@ -426,8 +426,8 @@
 		<br/>
 		<div class="a111">
 		<tr>
-			<td>&nbsp;开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。<td/><br/>
-			<td>&nbsp;为企业网站的留言板模块做过CSS修改。<td/>
+			<td>&nbsp;&nbsp;开设过淘宝店铺、敦煌网店铺，了解网店店铺装修与图片排版。<td/><br/>
+			<td>&nbsp;&nbsp;为企业网站的留言板模块做过CSS修改。<td/>
 		</tr>
 		</div>
         </div>
