--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -382,7 +382,7 @@
 		<tr >
 			<td>联系电话：</td>
 			<td>13684910383</td>&nbsp;
-			<td>E-mail：</td>
+			<td>E&nbsp;-&nbsp;mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
 		</div>
