--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -416,7 +416,7 @@
  			<td>&nbsp;&nbsp;掌握会声会影软件的基本操作方法，能对视频进行简单编辑。<td/><br/>
  			<td>&nbsp;&nbsp;了解Photoshop、CorelDRAW软件的使用方法。<td/><br/>
  			<td>&nbsp;&nbsp;熟悉Office（Word、Excel、PowerPoint）办公软件，拥有全国计算机高新技术考试合格证书。<td/><br/>
- 			<td>&nbsp;&nbsp;懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网<td/>
+ 			<td>&nbsp;&nbsp;懂得HTML、CSS的基本语法与少量JS，能运用DIV+CSS制作简易网站。<td/>
 		</tr>
 		</div>
         </div>
