--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -364,15 +364,15 @@
 		
 		<div class="a111">
 		<tr>	&nbsp;
-			<td width:"100px">姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
-			<td>廖新伟</td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<td width:"200px">姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
+			<td >廖新伟</td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
 		<br/>
 		&nbsp;
 		<tr>
-			<td>出生年月：</td>
+			<td width:"200px">出生年月：</td>
 			<td>1999/08</td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     	
 			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
@@ -380,7 +380,7 @@
 		<br/>
 		&nbsp;
 		<tr >
-			<td>联系电话：</td>
+			<td width="200px">联系电话：</td>
 			<td>13684910383</td>&nbsp;
 			<td>E&nbsp;-&nbsp;mail：</td>
 			<td>787251317@qq.com</td>
