--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -365,7 +365,7 @@
 		<div class="a111">
 		<tr>	&nbsp;
 			<td width:"200px">姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
-			<td >廖新伟</td> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<td >廖新伟</td> 
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
 		</tr>
@@ -373,7 +373,7 @@
 		&nbsp;
 		<tr>
 			<td width:"200px">出生年月：</td>
-			<td>1999/08</td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     	
+			<td>1999/08</td>     	
 			<td>住&nbsp;&nbsp;&nbsp;&nbsp;址：</td>
 			<td>深圳市南山区</td>
 		</tr>	
@@ -381,7 +381,7 @@
 		&nbsp;
 		<tr >
 			<td width="200px">联系电话：</td>
-			<td>13684910383</td>&nbsp;
+			<td>13684910383</td>
 			<td>E&nbsp;-&nbsp;mail：</td>
 			<td>787251317@qq.com</td>
 		</tr>
