--- a/gerenjianli.html
+++ b/gerenjianli.html
@@ -364,7 +364,7 @@
 		
 		<div class="a111">
 		<tr>	&nbsp;
-			<td style="width:200px;">姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
+			<td width="200">姓&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
 			<td >廖新伟</td> 
 			<td>性&nbsp;&nbsp;&nbsp;&nbsp;别：</td>
 			<td>男</td>
